--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@next/font": "13.1.2",
     "@nivo/core": "^0.80.0",
+    "@nivo/geo": "^0.80.0",
     "@nivo/radar": "^0.80.0",
+    "chart.js": "^4.2.0",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.2",
     "framer-motion": "^8.4.3",
+    "google-map-react": "^2.2.0",
     "next": "13.1.2",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "typewriter-effect": "^2.19.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
